# ACM-Code

./: .clang-format  .gitignore  CMakeLists.txt  HDU-1159.cpp  NEFU.c  NEFU.cpp  bound.cpp  cpp.cpp  desktop.ini  in.txt  main.cpp  matrix.cpp  ocean.cpp  ocean2.cpp  qpow.cpp  seat.cpp  template.cpp  zyx.cpp
2022-C-Homework/HW-MultiDim-Array/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
2022-C-Homework/HW-Pointer/: A.cpp  B.cpp  C.cpp
2022-C-Homework/HW-String/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
2022-C-Homework/HW-Stuct/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
2022-Summer/Week-1-CalcGeo/: CircurCoverage.cpp  NearestPointPair.cpp  POJ-1265.cpp  ScanLine.cpp  TrianglePartition.cpp
20220311/: A.cpp
20220510/: A.cpp  B.cpp  C.cpp  D.cpp  I.cpp
2023-Competition/: E.cpp  F.cpp  G.cpp  H.cpp
ACM-BinarySearch/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
ACM-DataStructure/: A.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  K.cpp  L.cpp
ACM-DynamicProgramming/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  K.cpp  L.cpp  M.cpp
ACM-Math/: A.cpp
ACM_SEARCH/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp
ACM_STL/: A.cpp  D.cpp  F.cpp  G.cpp  I.cpp
CTF/: Reverse.cpp  WestLake_100.cpp  level1.cpp  level3.cpp
CTF/CISCN/: A.cpp
Classmates-Shitty-Code/: jrt.cpp  lr.cpp  lxy.cpp  ph.cpp  wc.cpp  wyc.cpp  yhm.cpp  zzr.cpp
Codeforces/: Gym-103446.cpp
Codeforces/#550 Div3/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
Codeforces/#551 Div2/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
HDU/: 1003.cpp  1003_std.cpp
HLJCPC/: A.cpp  D.cpp  H.cpp  L.cpp
LanQiao/: A.cpp  C.cpp  D.cpp  E.cpp  H.cpp  QE.cpp
Luogu/: CF1641C.cpp  P1059.cpp  P1115.cpp  P1115_1.in  P1115_1.out  P1116.cpp  P1152.cpp  P1271.cpp  P1923.cpp  P2676.cpp
Luogu/Week-1/: A.cpp  B.cpp  I.cpp  P.cpp
Luogu/Week-2/: C.cpp  E.cpp  F.cpp  G.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp  Q.cpp
Luogu/Week-3/: B.cpp  C.cpp  D.cpp  G.cpp  H.cpp  I.cpp  K.cpp  L.cpp  N.cpp  O.cpp  R.cpp  S.cpp
Luogu/Week-4/: A.cpp  C.cpp  E.cpp  J.cpp  K.cpp  M.cpp
Luogu/Week-5/: C.cpp  E.cpp
Match-220302/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
Math/: A.cpp  B.cpp  C.cpp
NEFU-ACM/: P1079.cpp  P1106.cpp  P1209.cpp  P1216.cpp  P1236.cpp  P17.cpp  P1712.cpp  P1713.cpp  P1719.cpp  P1719_std.cpp  P1730.cpp  P20.cpp  P21.cpp  P2200.cpp  P2236.cpp  P226.cpp  P26.cpp  P278.cpp  P278_std.cpp  P410.cpp  P411.cpp  P412.cpp  P413.cpp  P415.cpp  P421.cpp  P430.cpp  P430_std.cpp  P452.cpp  P576.cpp  P614.cpp  P65.cpp  P891.cpp  tmp.cpp
NEFU_Contest_Grade_1/: A.cpp
Templates_Code/: fft.cpp  insert.cpp  linked_list.cpp  prime_eratosthenes.cpp  prime_euler.cpp  sort.in  sort_bubble.cpp  sort_insert.cpp  sort_quick.cpp  sort_selection.cpp
TianTi/: L1-1.cpp  L1-2.cpp  L1-3.cpp  L1-4.cpp  L1-6.cpp  L1-7.cpp
VP/: A.cpp  B.cpp  C.cpp  D.cpp
cyaron-master/: gen.py  gen_seq.py  genabc.py  list_std.cpp
cyaron-master/examples/: test_str.py
zyx/: 4.cpp  5.cpp  6.cpp  average.cpp  id.cpp  pyramid.cpp  sum.cpp
(+1 files in other folders)
