cmake_minimum_required(VERSION 3.20)
project(ACM)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")

#CMAKE_CXX_FLAGS="-Wall -std=c++98"
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++98")
add_executable(ACM main.cpp)
add_executable(NEFU NEFU.cpp)

add_executable(D VP/D.cpp)
add_executable(5 zyx/5.cpp)
add_executable(4 zyx/4.cpp)
add_executable(main main.cpp)
add_executable(L1-1 TianTi/L1-1.cpp)
add_executable(L1-3 TianTi/L1-3.cpp)
add_executable(L1-4 TianTi/L1-4.cpp)
add_executable(L1-2 TianTi/L1-2.cpp)
add_executable(L1-6 TianTi/L1-6.cpp)
add_executable(pyramid zyx/pyramid.cpp)
add_executable(average zyx/average.cpp)
add_executable(sum zyx/sum.cpp)
add_executable(prime_eratosthenes Templates_Code/prime_eratosthenes.cpp)
add_executable(prime_euler Templates_Code/prime_euler.cpp)
add_executable(qpow qpow.cpp)
add_executable(matrix matrix.cpp)
add_executable(HDU-1159 HDU-1159.cpp)
add_executable(zyx zyx.cpp)